# my-dev-lab

./: .gitignore  README.md  requirements.txt  run.py
PP_Programs/PP_Routine/: main.py
PP_Programs/PP_Routine/MyPP/: calculate_location.py  clearfault_test.py  collect_send_data.py  control_gripper.py  control_robot.py  control_robot_2.py  get_data_information.py  robot_socket.py  security_zone.py  usb_sensorPP.py
PP_Programs/build package/: elements-0.5.1-py3-none-any.whl  ppdk-0.370.7-py3-none-any.whl  ppdk-1.370.0-py3-none-any.whl  ppdk-1.370.1-py3-none-any.whl
calculate_centroid_single_grasp/: Fz测量精度优化报告.md  六维力传感器重量计算结果.md  单次抓取重量质心计算结果.md
config/: config.json
esp32_smart_car_app/docs/: circuit.md
esp32_smart_car_app/server/: relay_server.py
esp32_smart_car_app/web/: index.html  manifest.json
esp32_smart_car_app/windows/: CMakeLists.txt
esp32cam_app/: pubspec.yaml
esp32cam_app/esp32_firmware/: README.md
esp32cam_app/test/: widget_test.dart
esp32cam_app/web/: index.html
src/: cli.py
src/data/: csv_utils.py
src/esp32_develop/esp32_smart_car_app/firmware_bak/esp32_smart_car_idf/main/: CMakeLists.txt  main.c  motor_driver.c  motor_driver.h  ota_server.c  ota_server.h  websocket_server.c  websocket_server.h  wifi_app.c  wifi_app.h
src/utils/: flexivrdk_helper.py  flexivrdk_helper_1.7.1.py  logger_util.py  tool_utils.py
test/: Robot_CycleTime_Analysis.xlsx  calculate_centroid_single_grasp.py  pp_motor.py  robotic_arm_grasping_sim.py  test_clac_node_beat.py  test_modbus.py  test_motor.py
test/FormationStudio/: hello.xml  on_click.py
(+221 files in other folders)
